--- a/everywhere.css
+++ b/everywhere.css
@@ -8,7 +8,11 @@ a.mainmenu {background: black; border-radius: 100%;}
 .glitch::after{content:attr(data-text);position:absolute;top:0;left:0;width:100%;height:100%;left:-2px;text-shadow:-2px 0 var(--main1),2px 2px var(--main2);animation:glitch-anim2 1s infinite linear alternate-reverse}
 
 //* nav perso *//
-a.menutitre, .menutitre a:link, .menutitre a:visited, .menutitre a:active {color: var(--gray)!important;}
+a.menutitre {color: var(--gray)!important;} 
+.menutitre a:link {color: var(--gray)!important;}
+.menutitre a:visited {color: var(--gray)!important;}
+.menutitre a:active {color: var(--gray)!important;}
+.menutitre a {color: var(--gray)!important;}
 .navmyr li {list-style-type: none;height: 6vh;}
 .navmyr a i.cp {color: var(--main1);}
 .menutitre {color:var(--gray)!important;text-align:left;border-bottom:solid 1px var(--gray);border-image:linear-gradient(45deg,var(--main1),var(--main2)) 1;box-shadow:0 0 10px var(--main2))!important;font-family:'Overpass Mono',monospace;text-transform:uppercase;font-size:1.2em;}
